# simlens

./: .gitignore  Cargo.toml  EVALUATION.md  LICENSE  README.md  SPEC.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench.py
crates/simlens-core/: Cargo.toml
crates/simlens-core/benches/: attribution.rs
crates/simlens-core/src/: attribute.rs  bundle.rs  cav.rs  lib.rs  linalg.rs  sae.rs  types.rs
crates/simlens-py/: Cargo.toml
crates/simlens-py/src/: lib.rs
docs/: benchmarks.md  how-simlens-works.md  validation.md
examples/: _corpus.py  autofit_and_integrations.py  e2e_qdrant.py  notebook_audit.py  notebook_kg.py  notebook_rag.py  notebook_recsys.py  quickstart.py
landing/: README.md  package-lock.json  package.json
landing/app/: globals.css  layout.tsx  page.tsx
landing/app/docs/: page.tsx
landing/app/how-it-works/: page.tsx
landing/components/: CodeBlock.tsx
proto/: simlens.proto
python/simlens/: __init__.py  anisotropy.py  autofit.py  bundle.py  cli.py  explain.py  hierarchy.py  learned.py  multivector.py  serve.py  types.py
python/simlens/adapters/: __init__.py  base.py  faiss.py  memory.py  pgvector.py  qdrant.py  weaviate.py
python/simlens/eval/: __init__.py  calibration.py  certify.py  faithfulness.py
python/simlens/integrations/: __init__.py  _util.py  audit.py  kg.py  rag.py  recsys.py
python/simlens/naming/: __init__.py  autointerp.py  base.py  keyword.py  llm.py
python/simlens/train/: __init__.py  cav.py  labeling.py  metrics.py  sae.py  torch_backend.py
python/simlens/viz/: __init__.py
tests/: test_adversarial.py  test_anisotropy.py  test_autofit_integrations.py  test_autointerp.py  test_certify.py  test_extras.py  test_faithfulness_bench.py  test_ffi.py  test_frontier.py  test_learned.py  test_live_adapters.py  test_notebooks.py  test_properties.py  test_python.py  test_trainer.py
