[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "simlens"
version = "0.2.0"
description = "Faithful, vector-only similarity & ranking attribution — the 'why' vector search never returns."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "ghassenov" }]
keywords = ["embeddings", "interpretability", "vector-search", "explainability", "attribution", "sae"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
# vector-store adapters
qdrant = ["qdrant-client"]
pgvector = ["psycopg[binary]>=3"]
faiss = ["faiss-cpu"]
weaviate = ["weaviate-client"]
# LLM feature-naming providers (pick one)
openai = ["openai>=1"]
gemini = ["google-generativeai"]
llm = ["openai>=1"]
# research-scale SAE training (GPU) + importing external dictionaries
train = ["torch>=2", "safetensors>=0.4"]
# sublinear kNN candidate generation for the knowledge-graph extension
kg = ["hnswlib>=0.7"]
# convenience bundles
all = ["qdrant-client", "openai>=1"]
serve = []
dev = ["pytest>=7", "maturin>=1.7", "hypothesis>=6"]

[project.scripts]
simlens = "simlens.cli:main"

[project.urls]
Repository = "https://github.com/ghassenov/simlens"

[tool.pytest.ini_options]
markers = [
    "integration: live external-service tests (Qdrant/pgvector), skipped when absent",
]

[tool.maturin]
manifest-path = "crates/simlens-py/Cargo.toml"
python-source = "python"
module-name = "simlens._native"
features = ["pyo3/extension-module"]
